fixed overflow on initial load. fixed firefox not firing click event. fixed resize handle from showing up too far to the right.

--- a/src/modules/grid/grid.component.scss
+++ b/src/modules/grid/grid.component.scss
@@ -17,6 +17,7 @@
   margin: 0;
   font-size: $sky-font-size-base;
   min-width: 100%;
+  overflow: hidden;
 
   &.sky-grid-fit {
     width: 100%;
